# mcp-servers

./: .gitignore  README.md
canton/: README.md  pyproject.toml  server.py
chainlink/: README.md  pyproject.toml  server.py
ethereum/: README.md  pyproject.toml  server.py
layerzero/: README.md  pyproject.toml  server.py
lifi/: README.md  pyproject.toml  server.py
solana/: README.md  pyproject.toml  server.py
tenzro/: README.md  pyproject.toml
