[project]
name = "tenzro-canton-mcp"
version = "0.1.0"
description = "MCP server for Canton 3.x / DAML — JSON Ledger API v2, CIP-56 tokenization, and DvP settlement"
license = "Apache-2.0"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.9.0",
    "httpx>=0.27.0",
]

[project.scripts]
tenzro-canton-mcp = "server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
