[project]
name = "tenzro-chainlink-mcp"
version = "0.1.0"
description = "MCP server for Chainlink CCIP, data feeds, Data Streams, VRF, Automation, and Functions"
license = "Apache-2.0"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.9.0",
    "httpx>=0.27.0",
    "eth-abi>=5.0.0",
    "eth-utils>=4.0.0",
]

[project.scripts]
tenzro-chainlink-mcp = "server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
