[project]
name = "tenzro-layerzero-mcp"
version = "0.1.0"
description = "MCP server for LayerZero V2 cross-chain messaging, OFT transfers, and Stargate bridging"
license = "Apache-2.0"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.9.0",
    "httpx>=0.27.0",
    "eth-abi>=5.0.0",
    "eth-utils>=4.0.0",
]

[project.scripts]
tenzro-layerzero-mcp = "server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
