[project]
name = "tenzro-lifi-mcp"
version = "0.1.0"
description = "MCP server for LI.FI cross-chain DEX aggregation — quotes, routing, and transaction tracking"
license = "Apache-2.0"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.9.0",
    "httpx>=0.27.0",
]

[project.scripts]
tenzro-lifi-mcp = "server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
