[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tenzro-solana-mcp"
version = "0.1.0"
description = "Solana MCP server — Jupiter, SPL, Metaplex, staking, SNS"
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
dependencies = ["fastmcp>=3.0", "httpx>=0.27"]

[project.urls]
Homepage = "https://tenzro.com"
Repository = "https://github.com/tenzro/mcp-servers"
