[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tenzro-mcp"
version = "0.1.0"
description = "Tenzro L1 MCP server — 109 blockchain tools for AI agents"
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
dependencies = ["fastmcp>=3.0", "httpx>=0.27"]

[project.urls]
Homepage = "https://tenzro.com"
Repository = "https://github.com/tenzro/mcp-servers"
